🔧 (publish-docker-v2.yml): Replace newline characters with commas in TAGS variable for better parsing ♻️ (publish-docker-v2.yml): Refactor TAGS variable to be an array for more efficient iteration in the Docker Manifest creation step

--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -116,18 +116,17 @@ jobs:
         run: |
             SHA_SHORT=${{ env.SHA_SHORT }}
             RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
-            TAGS=$(echo $RESPONSE | jq -r '.results[].name')
+            TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',')
             echo "Fetched tags: $TAGS"
             echo "TAGS=$TAGS" >> $GITHUB_ENV
 
       - name: Create and Push Docker Manifest
         run: |
             BRANCH_NAME=${{ env.BRANCH_NAME }}
-            TAGS="${{ env.TAGS }}"
-            
-            if [ -n "$TAGS" ]; then
+            IFS=',' read -r -a TAG_ARRAY <<< "${{ env.TAGS }}"
+            if [ ${#TAG_ARRAY[@]} -gt 0 ]; then
                 MANIFEST_CMD="docker manifest create dublok/base-linux:alpine-$BRANCH_NAME"
-                for tag in $TAGS; do
+                for tag in "${TAG_ARRAY[@]}"; do
                     MANIFEST_CMD+=" --amend dublok/base-linux:${tag}"
                 done
                 echo "Running command: $MANIFEST_CMD"
