--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -105,24 +105,16 @@ jobs:
         SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
         BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
     steps:
-
       - name: Print ENV Variables
         run: |
             echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
             echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
-
-            
-      - name: Update Docker
-        run: |
-          sudo apt-get update
-          sudo apt-get install -y docker-ce docker-ce-cli containerd.io
-            
-      - name: Install Docker Buildx
-        run: |
-          mkdir -p ~/.docker/cli-plugins
-          curl -sSL https://github.com/docker/buildx/releases/latest/download/buildx-v0.8.2.linux-amd64 -o ~/.docker/cli-plugins/docker-buildx
-          chmod +x ~/.docker/cli-plugins/docker-buildx
-          docker buildx version
+  
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+  
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
   
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
@@ -140,7 +132,6 @@ jobs:
             BRANCH_NAME=${{ env.BRANCH_NAME }}
             IFS=',' read -r -a TAG_ARRAY <<< "${{ env.TAGS }}"
             if [ ${#TAG_ARRAY[@]} -gt 0 ]; then
-                docker buildx create --use
                 for tag in "${TAG_ARRAY[@]}"; do
                     docker pull dublok/base-linux:${tag}
                 done
@@ -150,6 +141,7 @@ jobs:
                 echo "No tags fetched. Skipping docker manifest creation."
             fi
         shell: /usr/bin/bash -e {0}
+          
 
     #   - name: Log in to DockerHub
     #     uses: docker/login-action@v3
