🔧 (publish-docker-v2.yml): Add docker buildx create --use command to initialize a new builder instance ✨ (publish-docker-v2.yml): Add check for image architecture compatibility before pulling image 💡 (publish-docker-v2.yml): Add echo statement to inform when a tag is skipped due to architecture incompatibility ♻️ (publish-docker-v2.yml): Remove trailing whitespace

--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -132,8 +132,13 @@ jobs:
             BRANCH_NAME=${{ env.BRANCH_NAME }}
             IFS=',' read -r -a TAG_ARRAY <<< "${{ env.TAGS }}"
             if [ ${#TAG_ARRAY[@]} -gt 0 ]; then
+                docker buildx create --use
                 for tag in "${TAG_ARRAY[@]}"; do
-                    docker pull dublok/base-linux:${tag}
+                    if docker buildx imagetools inspect dublok/base-linux:${tag} > /dev/null 2>&1; then
+                        docker pull dublok/base-linux:${tag}
+                    else
+                        echo "Skipping tag dublok/base-linux:${tag} as it does not support the current architecture"
+                    fi
                 done
                 docker buildx imagetools create -t dublok/base-linux:alpine-$BRANCH_NAME $(printf "dublok/base-linux:%s " "${TAG_ARRAY[@]}")
                 docker buildx imagetools inspect dublok/base-linux:alpine-$BRANCH_NAME
@@ -141,7 +146,7 @@ jobs:
                 echo "No tags fetched. Skipping docker manifest creation."
             fi
         shell: /usr/bin/bash -e {0}
-          
+  
 
     #   - name: Log in to DockerHub
     #     uses: docker/login-action@v3
