--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -100,57 +100,56 @@ jobs:
 
   create-and-push-manifest:
     needs: build-and-push
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     env:
-        SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
-        BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
+        SHA_SHORT: ${{ github.sha }}
+        BRANCH_NAME: ${{ github.ref_name }}
     steps:
       - name: Print ENV Variables
         run: |
-            echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
-            echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
-  
+          echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
+          echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
+
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v2
-  
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-  
+
       - name: Log in to Docker Hub
         run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-  
+
       - name: Fetch Tags from Docker Hub
         run: |
-            SHA_SHORT=${{ env.SHA_SHORT }}
-            RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
-            TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',')
-            echo "Fetched tags: $TAGS"
-            echo "TAGS=$TAGS" >> $GITHUB_ENV
-  
+          SHA_SHORT=${{ env.SHA_SHORT }}
+          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
+          TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',')
+          echo "Fetched tags: $TAGS"
+          echo "TAGS=$TAGS" >> $GITHUB_ENV
+
       - name: Create and Push Docker Manifest
         run: |
-            BRANCH_NAME=${{ env.BRANCH_NAME }}
-            IFS=',' read -r -a TAG_ARRAY <<< "${{ env.TAGS }}"
-            VALID_TAGS=()
-            docker buildx create --use
-            for tag in "${TAG_ARRAY[@]}"; do
-                echo "Checking tag dublok/base-linux:${tag}"
-                if docker buildx imagetools inspect dublok/base-linux:${tag} > /dev/null 2>&1; then
-                    echo "Tag dublok/base-linux:${tag} is valid"
-                    VALID_TAGS+=("dublok/base-linux:${tag}")
-                    docker pull dublok/base-linux:${tag}
-                else
-                    echo "Skipping tag dublok/base-linux:${tag} as it does not support the current architecture"
-                fi
-            done
-            if [ ${#VALID_TAGS[@]} -gt 0 ]; then
-                docker buildx imagetools create -t dublok/base-linux:alpine-$BRANCH_NAME "${VALID_TAGS[@]}"
-                docker buildx imagetools inspect dublok/base-linux:alpine-$BRANCH_NAME
-            else
-                echo "No valid tags fetched. Skipping docker manifest creation."
-            fi
+          BRANCH_NAME=${{ env.BRANCH_NAME }}
+          IFS=',' read -r -a TAG_ARRAY <<< "${{ env.TAGS }}"
+          VALID_TAGS=()
+          docker buildx create --use
+          for tag in "${TAG_ARRAY[@]}"; do
+              echo "Checking tag dublok/base-linux:${tag}"
+              if docker buildx imagetools inspect dublok/base-linux:${tag} > /dev/null 2>&1; then
+                  echo "Tag dublok/base-linux:${tag} is valid"
+                  VALID_TAGS+=("dublok/base-linux:${tag}")
+                  docker pull dublok/base-linux:${tag}
+              else
+                  echo "Skipping tag dublok/base-linux:${tag} as it does not support the current architecture"
+              fi
+          done
+          if [ ${#VALID_TAGS[@]} -gt 0 ]; then
+              docker buildx imagetools create -t dublok/base-linux:alpine-$BRANCH_NAME "${VALID_TAGS[@]}"
+              docker buildx imagetools inspect dublok/base-linux:alpine-$BRANCH_NAME
+          else
+              echo "No valid tags fetched. Skipping docker manifest creation."
+          fi
         shell: /usr/bin/bash -e {0}
-          
 
     #   - name: Log in to DockerHub
     #     uses: docker/login-action@v3
