--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -100,10 +100,10 @@ jobs:
 
   create-and-push-manifest:
     needs: build-and-push
-    runs-on: ubuntu-latest    
+    runs-on: ubuntu-latest
     env:
-        SHA_SHORT: ${{ github.sha }}
-        BRANCH_NAME: ${{ github.ref_name }}
+        SHA_SHORT: ${{ needs.build-and-push.outputs.SHA_SHORT }}
+        BRANCH_NAME: ${{ needs.build-and-push.outputs.BRANCH_NAME }}
     steps:
       - name: Print ENV Variables
         run: |
