--- a/.github/workflows/publish-docker-v2.yml
+++ b/.github/workflows/publish-docker-v2.yml
@@ -110,43 +110,59 @@ jobs:
           echo "SHA_SHORT: ${{ env.SHA_SHORT }}"
           echo "BRANCH_NAME: ${{ env.BRANCH_NAME }}"
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v2
-
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-
+  
       - name: Log in to Docker Hub
-        run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+        uses: docker/login-action@v2
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_TOKEN }}
 
-      - name: Fetch Tags from Docker Hub
-        id: fetch-tags
+      # - name: Pull amd64 image
+      #   run: docker pull dublok/base-linux:alpine-7737071-amd64
+  
+      # - name: Pull arm64 image
+      #   run: docker pull dublok/base-linux:alpine-7737071-arm64
+      
+      - name: Create and push multi-arch manifest
         run: |
-          SHA_SHORT=${{ env.SHA_SHORT }}
-          RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
-          TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',')
-          echo "Fetched tags: $TAGS"
-          echo "TAGS=$TAGS" >> $GITHUB_ENV
+          docker buildx imagetools create \
+            --tag dublok/base-linux:alpine-7737071 \
+            dublok/base-linux:alpine-7737071-amd64 \
+            dublok/base-linux:alpine-7737071-arm64
 
-      - name: Create and Push Docker Manifest
-        run: |
-          BRANCH_NAME=${{ env.BRANCH_NAME }}
-          TAGS=${{ steps.fetch-tags.outputs.TAGS }}
-          IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
-          VALID_TAGS=()
-          docker buildx create --use
-          for tag in "${TAG_ARRAY[@]}"; do
-              if docker buildx imagetools inspect dublok/base-linux:${tag} > /dev/null 2>&1; then
-                  VALID_TAGS+=("dublok/base-linux:${tag}")
-              fi
-          done
-          if [ ${#VALID_TAGS[@]} -gt 0 ]; then
-              docker buildx imagetools create -t dublok/base-linux:alpine-$BRANCH_NAME "${VALID_TAGS[@]}"
-              docker buildx imagetools inspect dublok/base-linux:alpine-$BRANCH_NAME
-          else
-              echo "No valid tags found. Skipping Docker manifest creation."
-          fi
-        shell: /usr/bin/bash -e {0}
+      # - name: Log in to Docker Hub
+      #   run: echo "${{ secrets.DOCKER_TOKEN }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+
+      # - name: Fetch Tags from Docker Hub
+      #   id: fetch-tags
+      #   run: |
+      #     SHA_SHORT=${{ env.SHA_SHORT }}
+      #     RESPONSE=$(curl -s -H "Authorization: Bearer ${{ secrets.DOCKER_TOKEN }}" "https://hub.docker.com/v2/repositories/dublok/base-linux/tags?name=$SHA_SHORT")
+      #     TAGS=$(echo $RESPONSE | jq -r '.results[].name' | tr '\n' ',')
+      #     echo "Fetched tags: $TAGS"
+      #     echo "TAGS=$TAGS" >> $GITHUB_ENV
+
+      # - name: Create and Push Docker Manifest
+      #   run: |
+      #     BRANCH_NAME=${{ env.BRANCH_NAME }}
+      #     TAGS=${{ steps.fetch-tags.outputs.TAGS }}
+      #     IFS=',' read -r -a TAG_ARRAY <<< "$TAGS"
+      #     VALID_TAGS=()
+      #     docker buildx create --use
+      #     for tag in "${TAG_ARRAY[@]}"; do
+      #         if docker buildx imagetools inspect dublok/base-linux:${tag} > /dev/null 2>&1; then
+      #             VALID_TAGS+=("dublok/base-linux:${tag}")
+      #         fi
+      #     done
+      #     if [ ${#VALID_TAGS[@]} -gt 0 ]; then
+      #         docker buildx imagetools create -t dublok/base-linux:alpine-$BRANCH_NAME "${VALID_TAGS[@]}"
+      #         docker buildx imagetools inspect dublok/base-linux:alpine-$BRANCH_NAME
+      #     else
+      #         echo "No valid tags found. Skipping Docker manifest creation."
+      #     fi
+      #   shell: /usr/bin/bash -e {0}
 
     #   - name: Log in to DockerHub
     #     uses: docker/login-action@v3
