🔧 (publish-docker.yml): add output_path to Docker publish action for SBOMs

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -160,4 +160,5 @@ jobs:
         with:
           images: ${{ env.IMAGE_LIST }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
+          output_path: /workspace/sboms
           
