🔧 (publish-docker.yml): remove redundant comment in sbom_file_name configuration

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -163,5 +163,5 @@ jobs:
           output_path: "sboms"
           sbom_file_prefix: ""
           sbom_file_suffix: ""
-          sbom_file_name: "[TAG]" # [REPOSITORY]_[TAG]
+          sbom_file_name: "[TAG]"
           
