🔧 (publish-docker.yml): update Docker Package Versions Action to SBOMinify@v1 for improved functionality

--- a/.github/workflows/publish-docker.yml
+++ b/.github/workflows/publish-docker.yml
@@ -156,7 +156,7 @@ jobs:
             eval $IMAGETOOLS_CMD
   
       - name: Run Docker Package Versions Action
-        uses: DockForge/packages@main
+        uses: DockForge/SBOMinify@v1
         with:
           images: ${{ env.IMAGE_LIST }}
           github_token: ${{ secrets.GITHUB_TOKEN }}
