🔧 (Dockerfile): set executable permissions for s6-overlay scripts 🔧 (Dockerfile): update permission setting for all scripts in /docker-mods and /etc/s6-overlay

--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -51,6 +51,9 @@ RUN tar -C /root-out -Jxpf /tmp/s6-overlay-${ARCH}.tar.xz
 RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-noarch.tar.xz
 RUN tar -C /root-out -Jxpf /tmp/s6-overlay-symlinks-arch.tar.xz
 
+# Set permissions for s6-overlay scripts
+RUN find /root-out/etc/s6-overlay/ -type f -exec chmod +x {} \;
+
 # Runtime stage
 FROM scratch
 COPY --from=rootfs-layer /root-out/ /
@@ -65,9 +68,9 @@ LABEL maintainer="Dublok"
 COPY assets/mod-scripts/docker-mods.${MODS_VERSION}.sh /docker-mods
 COPY assets/mod-scripts/package-install.${PKG_INST_VERSION}.sh /etc/s6-overlay/s6-rc.d/init-mods-package-install/run
 
-# set permissions
-RUN chmod 744 /docker-mods && \
-    chmod 744 /etc/s6-overlay/s6-rc.d/init-mods-package-install/run
+# set permissions for all scripts in /docker-mods and /etc/s6-overlay
+RUN find /docker-mods -type f -exec chmod +x {} \; && \
+    find /etc/s6-overlay/ -type f -exec chmod +x {} \;
 
 # environment variables
 ENV PS1="$(whoami)@$(hostname):$(pwd)\\$ " \
